# qt-advanced-sumithshaha

./: README.md  project-plan-v2.1.md
Final Project Materials/whisper-lite/whisper-lite/: LICENSE  README.md
Final Project Materials/whisper-lite/whisper-lite/client/: CMakeLists.txt
Final Project Materials/whisper-lite/whisper-lite/client/android/: AndroidManifest.xml
Final Project Materials/whisper-lite/whisper-lite/client/android/res/raw/: spki_pin.txt  whisper_ca.pem
Final Project Materials/whisper-lite/whisper-lite/client/android/res/xml/: network_security_config.xml
Final Project Materials/whisper-lite/whisper-lite/client/qml/: ChatPage.qml  StatusIndicator.qml
Final Project Materials/whisper-lite/whisper-lite/client/src/: chatcontroller.cpp  chatcontroller.h  main.cpp  messagemodel.cpp  messagemodel.h  messagestore.cpp  messagestore.h  notificationhelper.cpp  notificationhelper.h  settings.cpp  settings.h  tlsconfig.cpp  tlsconfig.h  usermodel.cpp  usermodel.h  wsclient.cpp  wsclient.h
Final Project Materials/whisper-lite/whisper-lite/client/tests/: CMakeLists.txt  tst_store.cpp
Final Project Materials/whisper-lite/whisper-lite/docs/: BUILD-WINDOWS.md  PRESENTATION.md  SELF_ASSESSMENT.md
Final Project Materials/whisper-lite/whisper-lite/server/: Dockerfile  README.md  cert.pem  generate_certs.sh  key.pem  san.cnf  server.py
Teacher-provided Materials/: projectproposals.txt
